Updated react-dom to address vulnerabilities

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "deploy": "aws s3 sync public/ s3://bwanabanana.com"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -22,6 +23,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
@@ -32,7 +34,7 @@
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
-    "react-dom": "16.0.0",
+    "react-dom": "16.0.1",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
